change - profile photo - size of photo fix - photo distortion cleanup

--- a/cv/static/cv/css/default.css
+++ b/cv/static/cv/css/default.css
@@ -628,6 +628,9 @@ input[type="checkbox"] { display: inline; }
     float: none;
     margin: 0 auto;
 }
+.no-padding{
+    padding: 0;
+}
 
 /* removed gutters */
 .row.collapsed > .column,
